# trading_engine

./: CMakeLists.txt  README.md  all_builds.sh  build_all.sh  conanfile.py  conanfile.txt
include/: debug.h  itch_msg.h  itchparser.h  rawmessage.h  ringbuffer.h
include/orderbook/: LevelInfo.h  MatchResult.h  Order.h  OrderBook.h  OrderBookVisitor.h  OrderDirectory.h  OrderModify.h  PruningVisitor.h  TradeInfo.h
include/orderbook_headers/: Order.h
itch/: .gitignore  ITCH50.txt
order_book/include/: OrderBook.h
order_book/src/: OrderBook.cpp
src/: itchparser.cpp  main.cpp
src/orderbook/: OrderBook.cpp
tests/: ringbench.cpp  ringtest.cpp
